Fix cover image size on mobile

--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -122,7 +122,6 @@
 /* Banner */
 
 	#banner {
-		background-size: 10em, 10em, auto, cover;
 		padding: 6em 0;
 	}
 
